<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/skeeralogo"
        android:layout_marginTop="50dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="250dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/first_team_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name_of_team_a"
            android:textAlignment="center"
            android:textColorHint="@android:color/white"
            android:background="@drawable/team_name_input"
            android:layout_margin="20dp"
            android:padding="15dp"
            android:gravity="center_horizontal" />

        <EditText
            android:id="@+id/second_team_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name_of_team_b"
            android:textColorHint="@android:color/white"
            android:textAlignment="center"
            android:background="@drawable/team_name_input"
            android:layout_margin="20dp"
            android:padding="15dp"
            android:gravity="center_horizontal" />

    </LinearLayout>

    <Button
        android:id="@+id/start_score_keeper"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textAllCaps="false"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginBottom="140dp"
        android:background="@drawable/buttons"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        />

</RelativeLayout>