<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ScoreKeeperActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="60dp"
            android:textSize="50sp"
            android:textStyle="bold"
            android:textColor="@color/colorText"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/playBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/play"
                />

            <ImageButton
                android:id="@+id/pauseBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/pause" />

            <ImageButton
                android:id="@+id/stopBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/stop" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="250dp">

        <TextView
            android:id="@+id/first_team_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/team_a"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            android:layout_marginRight="50dp"
            android:layout_marginEnd="50dp" />

        <TextView
            android:id="@+id/second_team_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/team_b"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="290dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp">

            <ImageButton
                android:id="@+id/first_team_goal_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="30dp"
                android:src="@drawable/goal"
                android:background="@drawable/buttons"
                android:scaleType="fitXY"
                android:padding="6dp"/>

            <ImageButton
                android:id="@+id/first_team_foul_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/foul"
                android:background="@drawable/buttons"
                android:scaleType="fitXY"
                android:padding="6dp"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@color/colorButton" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp">

                <TextView
                    android:id="@+id/first_team_goal_counter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textColor="@color/colorText"
                    android:textSize="70sp" />

                <TextView
                    android:id="@+id/first_team_foul_counter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textColor="@color/colorText"
                    android:textSize="70sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp">

                <TextView
                    android:id="@+id/second_team_goal_counter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textColor="@color/colorText"
                    android:textSize="70sp" />

                <TextView
                    android:id="@+id/second_team_foul_counter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textColor="@color/colorText"
                    android:textSize="70sp" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@color/colorButton" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp">

            <ImageButton
                android:id="@+id/second_team_goal_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="30dp"
                android:src="@drawable/goal"
                android:background="@drawable/buttons"
                android:scaleType="fitXY"
                android:padding="6dp"
                />

            <ImageButton
                android:id="@+id/second_team_foul_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/foul"
                android:background="@drawable/buttons"
                android:scaleType="fitXY"
                android:padding="6dp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/add_new_btn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="30dp"
            android:background="@drawable/addnew"
             />

        <ImageButton
            android:id="@+id/reset_btn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/reset" />

        <ImageButton
            android:id="@+id/save_btn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="30dp"
            android:background="@drawable/save" />

    </LinearLayout>

</RelativeLayout>